Updated Python File and Retired the API Key

--- a/repo-downloader.ipynb
+++ b/repo-downloader.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "# Paste your Access token here\n",
     "# To create an access token - https://github.com/settings/tokens\n",
-    "token = \"access_token=\" + \"7d1e2bc7d27d806ed3e8f710dab7ccd7c102813a\"\n",
+    "token = \"access_token=\" + \"access_token_here\"\n",
     "\n",
     "# Base API Endpoint\n",
     "base_api_url = 'https://api.github.com/'"
